--- a/jl/css/index.css
+++ b/jl/css/index.css
@@ -154,6 +154,11 @@ h2 {
   color: #022B3A;
   margin-bottom: 5rem;
 }
+@media (max-width: 500px) {
+  h2 {
+    font-size: 3rem;
+  }
+}
 h3 {
   font-family: 'Work Sans', sans-serif;
   font-size: 2.8rem;
@@ -222,12 +227,14 @@ button {
   border: 2px solid #24b4a5;
   border-radius: 5px;
   margin-right: 1rem;
+  cursor: pointer;
 }
 button:focus {
   outline: thin dotted;
 }
 aside {
   display: flex;
+  text-align: center;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
@@ -633,20 +640,23 @@ footer {
 .carousel .left-button,
 .carousel .right-button {
   position: absolute;
-  color: #5603AD;
+  color: #8fedc2;
   background-color: #24b4a5;
-  font-size: 4rem;
+  font-size: 3rem;
   border-radius: 50%;
   width: 50px;
   height: 50px;
   z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
 }
 .carousel .left-button:hover,
 .carousel .right-button:hover {
   color: #8fedc2;
   background-color: #d3f0ed;
-  border: 1px solid #d3f0ed;
+  border: 1px solid #e3e3e3;
 }
 .carousel .left-button {
   left: 3rem;
