--- a/jl/less/global.less
+++ b/jl/less/global.less
@@ -26,6 +26,11 @@ h1, h2, h3, h4, p {
     font-size: 4rem;
     color: @accent2;
     margin-bottom: 5rem;
+
+    @media @mobile {
+      font-size: 3rem
+    }
+
   }
   
   h3 {
@@ -99,6 +104,7 @@ h1, h2, h3, h4, p {
     border: 2px solid @dark-teal;
     border-radius: 5px;
     margin-right: 1rem;
+    cursor: pointer;
   }
 
   button:focus { 
@@ -107,6 +113,7 @@ h1, h2, h3, h4, p {
 
   aside {
     display: flex;
+    text-align: center;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
